--- a/result/2022-01-11.md
+++ b/result/2022-01-11.md
@@ -52,3 +52,4 @@
 52. [太行山冬日冰瀑奇景](https://s.weibo.com//weibo?q=%23%E5%A4%AA%E8%A1%8C%E5%B1%B1%E5%86%AC%E6%97%A5%E5%86%B0%E7%80%91%E5%A5%87%E6%99%AF%23&Refer=top) 28230
 53. [篮球年末狂欢月](https://s.weibo.com//weibo?q=%23%E7%AF%AE%E7%90%83%E5%B9%B4%E6%9C%AB%E7%8B%82%E6%AC%A2%E6%9C%88%23&Refer=top) 27550
 54. [赵明称折叠屏进入主力机时代](https://s.weibo.com//weibo?q=%23%E8%B5%B5%E6%98%8E%E7%A7%B0%E6%8A%98%E5%8F%A0%E5%B1%8F%E8%BF%9B%E5%85%A5%E4%B8%BB%E5%8A%9B%E6%9C%BA%E6%97%B6%E4%BB%A3%23&Refer=top) 22492
+55. [大爷图吉利电动车上烧炭结果车着了](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E7%88%B7%E5%9B%BE%E5%90%89%E5%88%A9%E7%94%B5%E5%8A%A8%E8%BD%A6%E4%B8%8A%E7%83%A7%E7%82%AD%E7%BB%93%E6%9E%9C%E8%BD%A6%E7%9D%80%E4%BA%86%23&Refer=top) 17052
